--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,65 @@
 .header-bg{
     background-image: linear-gradient(to right top, #29116d, #371f74, #442d7b, #503a82, #5c4789);
-height: 350px;
+    
+}
+.sec{
+    margin-bottom: 95px;
+}
+.sec1{
+    margin-top: 95px;
 }
 .sec2{
-    height: 390px;
+   margin-top: 100px;
+}
+.btn{
+    background-color: #296CFC;
+    color: #fff;
 }
 .gallery{
-    margin-top: 100px;
+    margin-top: 50px;
+    margin-bottom: 100px;
 }
 .gallery-item{
     margin-bottom: 30px;
    
 }
-.modal-footer{
-	text-align: center;
+
+
+.weWork{
+    height: 400px;
+    background-image: url(../assets/image-we-work.jpg),
+    linear-gradient(to right top, #29116d, #371f74, #442d7b, #503a82, #5c4789,transparent 90%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-color:#29116d;
+    opacity: 0.9;
+    background-blend-mode: multiply;
+     clip-path: polygon(0 20%, 100% 0, 100% 80%, 0% 100%);
 }
-.pagination{
-	margin: 0;
+.img2{
+    width:300px;
+    height: 300px;
 }
+
+
 .list{
     color: #fff;
 }
 .texts{
     color: white;
+    margin-top: 50px;
 }
 .imgg{
     width: 100px;
     height: 150px;
 }
-.wall{
-  margin: 50px 0;
-  height: 100px;  
-  background: blue;
-  position: relative;
-  background-image: url(../assets/image-we-work.jpg);
-  background-position: center;
-  background-size: cover
-}
-.wall:before,
-.wall:after{
-    content: '';
-    position: absolute; left: 0;
-    width: 0;
-    height: 0;
-    border-style: solid;
-}
-.wall:before{
-    bottom: 100%;     
-    border-width: 0 0 50px 100vw;
-    border-color: transparent transparent blue transparent;
-}
-.wall:after{
-    top: 100%;
-    border-width: 50px 100vw 0 0;
-    border-color:blue transparent transparent transparent;
-}
 
 
 .shape {
-    position: relative;
-    width: 100%;
-    height: 290px;
+    height: 350px;
     background-image: linear-gradient(to right top, #29116d, #371f74, #442d7b, #503a82, #5c4789);
-    background-size: cover;
-    color: #fff;
+    clip-path: polygon(1% 33%, 100% 7%, 100% 100%, 0% 100%);
+
   }
-  
-  .content { 
-    display: flex;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .shape:before {
-    position: absolute;
-    width: 100%;
-    height: 20%;
-    content: "";
-    background: linear-gradient(to right bottom, rgba(255, 255, 255, 1) 50%, transparent 50%);
-  }
+ 
